+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 3.1 alpha 0
================================

*Release date: XX-XXX-2008*

Core and Builtins
-----------------


Library
-------


Build
-----


Docs
----


**(For information about older versions, consult the HISTORY file.)**